# rag-multimodal

./: .env_sample  .gitignore  .gitmodules  README.md  config.yaml  pyproject.toml  test_agent.py  test_indexing.py
notebooks/: 00_docling-basic.ipynb  01_indexing.ipynb  02_retrieval.ipynb
src/: agent.py  config.py  index.py  milvus_store.py  ui.py
