[project]
name = "rag-multimodal"
version = "0.1.0"
description = ""
authors = [
    {name = "Pisek",email = "psk.light@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "docling (>=2.40.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "langchain-docling (>=1.0.0,<2.0.0)",
    "pymilvus (>=2.5.12,<3.0.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langchain-milvus (>=0.2.1,<0.3.0)",
    "langgraph (>=0.5.2,<0.6.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
